# sentinel

./: .env.template  .gitignore  LICENSE  README.md  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
assets/html-demos/: demo-check-collision.html  demo-no-collision.html  demo-paste-output.html
scripts/: generate_demo_html.py
src/sentinel/: __init__.py  __main__.py
src/sentinel/cli/: __init__.py  commands.py  verbose.py
src/sentinel/core/: __init__.py  config.py  consolidation.py  constants.py  engine.py  exceptions.py  graph_ops.py  matching.py  persistence.py  rules.py  types.py
src/sentinel/viz/: __init__.py  ascii.py  html.py
tests/: conftest.py
tests/fixtures/schedules/: maya_boring_week.txt  maya_edge_cases.txt  maya_typical_week.txt
tests/integration/: __init__.py  test_check_command.py  test_cli_paste.py  test_config.py  test_core.py  test_demo_fixtures.py  test_fixtures.py  test_golden_demo_path.py  test_help.py  test_mock_engine.py  test_persistence.py  test_viz.py
tests/live/: __init__.py  test_baseline_e2e.py  test_bug003_e2e_validation.py  test_cognee_drains.py  test_corrections_live.py  test_epic3_user_control_e2e.py  test_story_27_e2e_validation.py
tests/unit/: __init__.py  test_acknowledgments.py  test_cli_ack.py  test_cli_check_ack.py  test_cli_correct.py  test_cli_display.py  test_cli_graph.py  test_cli_paste.py  test_confidence_filtering.py  test_config.py  test_core_constants.py  test_core_engine.py  test_core_types.py  test_corrections.py  test_corrections_integration.py  test_empty_state.py  test_engine_mapping.py  test_engine_mutate.py  test_extraction_prompt.py  test_fuzzy_matching.py  test_graph_ops.py  test_node_consolidation.py  test_persistence.py  test_rules.py  test_verbose.py  test_viz_ascii.py  test_viz_html.py
